dropshot/tests/fail/bad_server_endpoint23.stderr
error: expected `trait`
  --> tests/fail/bad_server_endpoint23.rs:13:1
   |
13 | fn bad_server() {}
   | ^^
